# rust-search

./: Cargo.toml  README.md  config.toml  output.txt
src/: config.rs  database.rs  lib.rs  main.rs  search.rs  tests.rs
