[package]
name = "rust-search"
version = "0.1.0"
edition = "2021"

[dependencies]
jwalk = "0.8.1"
timed = "0.2.1"
libsql = "0.9.13"
tokio = { version = "1.0", features = ["full"] }
diesel = { version = "2.2.12", features = ["sqlite"] }

[profile.release]
opt-level = 3         # Optimize for maximum execution speed
lto = "fat"           # Enable the most aggressive Link Time Optimization
codegen-units = 1     # Reduce the number of code generation units, increasing optimization time but improving performance
panic = "abort"       # Use 'abort' instead of 'unwind' for panic handling
overflow-checks = false
strip = true
debug = false